# ts_sdk_c_platforms_unix_raspberry-pi3

./: CMakeLists.txt  README.md  ts_cert.c  ts_driver_serial.c  ts_driver_socket.c  ts_file.c  ts_firewall.c  ts_mutex.c  ts_platform.c  ts_scep.c
firewall/: Makefile  README.md  mf_module.c
scripts/: verizon  verizon-chat
